fix(blog): sometimes horizontal scroll on mobile

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -32,13 +32,15 @@
     @apply antialiased;
   }
 
-  html {
-    @apply h-full;
-    color-scheme: light;
-  }
-
+  html,
   body {
     @apply h-full;
+    overflow-x: hidden;
+    max-width: 100%;
+  }
+
+  html {
+    color-scheme: light;
   }
 }
 
@@ -77,12 +79,13 @@
   color: var(--color-tertiary) !important;
 }
 
-.prose table {
+.prose :where(table) {
   font-size: inherit;
   font-family: inherit;
   display: block;
   overflow-x: auto;
-  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  max-width: calc(100vw - 4rem);
 }
 
 .prose th {
@@ -112,13 +115,11 @@
 
 /* Code blocks styling */
 .prose pre {
-  margin-left: -2rem;
-  margin-right: -2rem;
   padding: 1.5rem 1rem;
   border-radius: 0.5rem;
   background: #f6f8fa !important;
   overflow-x: auto;
-  max-width: 100vw;
+  max-width: calc(100vw - 4rem);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -129,8 +130,8 @@
 
 @media (min-width: 768px) {
   .prose pre {
-    margin-left: -6rem;
-    margin-right: -6rem;
+    margin-left: -4rem;
+    margin-right: -4rem;
     padding: 1.5rem 1.5rem;
   }
 }
